--- a/employees/webapp/index.html
+++ b/employees/webapp/index.html
@@ -15,8 +15,8 @@
             height: 100%;
         }
     </style>
-    <script id="sap-ui-bootstrap" src="resources/sap-ui-core.js" data-sap-ui-theme="sap_horizon"
-        data-sap-ui-resourceroots='{
+    <script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+        data-sap-ui-theme="sap_horizon" data-sap-ui-resourceroots='{
             "employees": "./"
         }' data-sap-ui-compatVersion="edge" data-sap-ui-async="true" data-sap-ui-frameOptions="trusted"></script>
     <script id="locate-reuse-libs" src="./utils/locate-reuse-libs.js" data-sap-ui-manifest-uri="./manifest.json"
